fix: letter-spacing in admin-panel

--- a/AdminPanel/client/src/components/AccessRules/AccessRules.module.scss
+++ b/AdminPanel/client/src/components/AccessRules/AccessRules.module.scss
@@ -45,7 +45,7 @@
   font-style: normal;
   font-size: 16px;
   line-height: 133%;
-  letter-spacing: 0%;
+  letter-spacing: 0em;
   text-align: center;
   text-transform: capitalize;
   cursor: pointer;
@@ -93,7 +93,7 @@
   font-style: normal;
   font-size: 18px;
   line-height: 120%;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   text-transform: none;
   box-sizing: border-box;
 
@@ -115,7 +115,7 @@
   font-style: normal;
   font-size: 18px;
   line-height: 120%;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   color: #333333;
   margin: 0 32px;
 }
@@ -132,7 +132,7 @@
   font-style: normal;
   font-size: 16px;
   line-height: 133%;
-  letter-spacing: 0%;
+  letter-spacing: 0em;
   text-align: center;
   text-transform: capitalize;
   cursor: pointer;
