--- a/AdminPanel/client/src/components/Menu/Menu.module.scss
+++ b/AdminPanel/client/src/components/Menu/Menu.module.scss
@@ -38,7 +38,7 @@
     font-weight: 600;
     font-size: 12px;
     line-height: 133%;
-    letter-spacing: 4%;
+    letter-spacing: 0.04em;
     text-transform: uppercase;
     color: #333333;
     margin-top: 8px;
@@ -70,7 +70,7 @@
     font-weight: 600;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: -1%;
+    letter-spacing: -0.01em;
     color: #333333;
     cursor: pointer;
 
