--- a/AdminPanel/client/src/components/Menu/MenuItem/MenuItem.module.scss
+++ b/AdminPanel/client/src/components/Menu/MenuItem/MenuItem.module.scss
@@ -27,5 +27,6 @@
     font-size: 16px;
     line-height: 150%;
     color: #333333;
+    letter-spacing: -0.01em;
   }
 }
