--- a/AdminPanel/client/src/components/PageDescription/PageDescription.module.scss
+++ b/AdminPanel/client/src/components/PageDescription/PageDescription.module.scss
@@ -3,7 +3,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 150%;
-  letter-spacing: 0%;
+  letter-spacing: 0em;
   color: #666666;
   margin: 0 0 32px 0;
 }
