--- a/AdminPanel/client/src/components/PageHeader/PageHeader.module.scss
+++ b/AdminPanel/client/src/components/PageHeader/PageHeader.module.scss
@@ -3,7 +3,7 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 130%;
-  letter-spacing: -2%;
+  letter-spacing: -0.02em;
   color: #333333;
   margin: 0 0 3px 0;
 }
