--- a/AdminPanel/client/src/components/Select/Select.module.scss
+++ b/AdminPanel/client/src/components/Select/Select.module.scss
@@ -19,7 +19,7 @@
   font-style: normal;
   font-size: 16px;
   line-height: 150%;
-  letter-spacing: 0%;
+  letter-spacing: 0em;
   color: #808080;
   cursor: pointer;
   outline: none;
