--- a/AdminPanel/client/src/components/Tabs/Tabs.module.scss
+++ b/AdminPanel/client/src/components/Tabs/Tabs.module.scss
@@ -13,7 +13,7 @@
   font-weight: 600;
   font-size: 13px;
   line-height: 150%;
-  letter-spacing: 4%;
+  letter-spacing: 0.04em;
   text-transform: uppercase;
   background: none;
   border: none;
